fixed spacing with exactly 1 gift

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -909,7 +909,6 @@ textarea {
 
       .popupPanel {
         position: relative;
-        padding-bottom: 2.5em;
 
         & > .action {
           position: absolute;
